fix: set mainhero hook color and subtext text alignment

--- a/src/app/components/main-hero/main-hero.style.scss
+++ b/src/app/components/main-hero/main-hero.style.scss
@@ -1,39 +1,40 @@
 .MainHero {
-    display: flex;
-    flex-direction: column;
-    letter-spacing: 6px;
-    min-height: 50%;
+  display: flex;
+  flex-direction: column;
+  letter-spacing: 6px;
+  min-height: 50%;
 
-    &__bg {
-        width: 100%;
-        height: 700px;
-        background-size: cover;
-        background-position: center;
+  &__bg {
+    width: 100%;
+    height: 700px;
+    background-size: cover;
+    background-position: center;
+  }
+
+  &__text {
+    max-width: 80%;
+    align-self: center;
+    padding: 0;
+    margin-top: 200px;
+    margin-bottom: 100px;
+    letter-spacing: 0;
+
+    * {
+      margin: 0;
     }
+  }
 
-    &__text {
-        max-width: 80%;
-        align-self: center;
-        padding: 0;
-        margin-top: 200px;
-        margin-bottom: 100px;
-        letter-spacing: 0;
+  &__hook {
+    color: inherit;
+    font-size: 2em;
+    font-family: var(--sans);
+    font-weight: 400;
+  }
 
-        * {
-            margin: 0;
-        }
-    }
-
-    &__hook {
-        color: black;
-        font-size: 2em;
-        font-family: var(--sans);
-        font-weight: 400;
-    }
-
-    &__subtext {
-        font-size: 1em;
-        font-family: 'Poppins';
-        font-weight: 300;
-    }
+  &__subtext {
+    font-size: 1em;
+    font-family: "Poppins";
+    font-weight: 300;
+    text-align: center;
+  }
 }
